Align content on y-axis and fix space down the button

--- a/chall-2.css
+++ b/chall-2.css
@@ -1,19 +1,26 @@
-* {
+/* * {
     outline: red 2px solid;
     font-family: cursive;
-}
+} */
 
 .logo {
-   font-size: 20px;
    font-weight: bold;
+   font-size: 35px;
 }
 
 ul {
     list-style-type: none;
     display: flex;
     padding: 0;
-    gap: 8px;
+    gap: 10px;
     margin: 0;
+    align-items: center;
+}
+li {
+    font-size: 20px;
+    /* padding: 14px; */
+    align-items: center;
+    font-family: cursive;
 }
 
 a {
@@ -22,7 +29,6 @@ a {
 
 .header {
     display: flex;
-    
 }
 
 .left-header {
@@ -32,4 +38,13 @@ a {
 
 .right-header {
     margin-left: auto;
+    display: flex;
+}
+button {
+    background-color: purple;
+    color: white;
+    border-radius: 10px;
+}
+.left-header ul {
+    color: purple;
 }
